--- a/src/components/Previewer/Previewer.css
+++ b/src/components/Previewer/Previewer.css
@@ -1,3 +1,11 @@
 p {
     white-space: pre-line;
 }
+
+blockquote {
+    background-color: lightgrey;
+}
+
+code {
+    background-color: lightgrey;
+}
